--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.1",
     "sort-by": "^0.0.2"
   },
