--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.1",
+    "react-transition-group": "^4.4.5",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
