--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.1",
     "react-transition-group": "^4.4.5",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "sweetalert2": "^11.10.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
